# hlx-vulkan

./: .gitignore  AUDIT_REPORT.md  COMPREHENSIVE_AUDIT_SUMMARY.md  COMPUTE_INFRASTRUCTURE_COMPLETE.md  Cargo.toml  HLX_TRANSFORMER_PAPER.md  HOW_TO_USE_WEB_OPUS.md  README.md  README_DEMO_CUBE.md  README_PIPELINE_CLI.md  README_SHADER_COMPILER.md  RESEARCH.md  VULKAN_POC_STATUS.md  build_shaders.sh  claude_exchange.md  test_all_contracts.py  test_cross_entropy_debug.py  test_lcb_gemm.py
benchmarks/: BENCHMARK_RESULTS.md
checkpoints/: training_curve.csv
docs/: HLXL_SPECIFICATION.md  README.md
examples/: compile_cube_shaders.sh  hlx_demo_cube_contract.hlxl  pipeline_contract.hlxl  pipeline_contract.json
examples/hlx-compute-particles/: Cargo.toml  README_COMPUTE_PARTICLES.md
examples/hlx-compute-particles/examples/: hlx_compute_particles_contract.hlxl
examples/hlx-compute-particles/shaders/: build_shaders.sh  particle.comp  particle.frag  particle.vert
examples/hlx-nbody/: IMPLEMENTATION_SUMMARY.md  INDEX.md  QUICKSTART.md  README_NBODY.md  VERIFICATION_CHECKLIST.md  determinism_test.py  hlx_nbody  hlx_nbody.rs  hlx_nbody_contract.hlxl
examples/hlx-nbody/contracts/: compute_kernel.json  graphics_pipeline.json
examples/hlx-nbody/shaders/: build_shaders.sh  nbody.comp  sphere.frag  sphere.vert
examples/hlx-raytrace-lab/: INDEX.md  README_RAYTRACE_LAB.md  hlx_raytrace_contract.hlxl  hlx_raytrace_lab.rs
examples/hlx-raytrace-lab/shaders/: build_shaders.sh  raytrace.rchit  raytrace.rgen  raytrace.rmiss
examples/image_classification/: Cargo.toml  README.md  contract.json
examples/image_classification/src/: main.rs
hlx-transformer/: ARCHITECTURE.md  Cargo.toml  INTEGRATION_GUIDE.md  README.md  TESTING.md  build_shaders.sh
hlx-transformer/shader/: embedding_forward.glsl  gelu_backward.glsl  gelu_forward.glsl  softmax_backward.glsl
hlx-transformer/src/: attention_kernel.rs  gemm_kernel.rs  lib.rs  tensor.rs  transformer_config.rs  transformer_layer.rs
hlx-transformer/tests/: test_transformer.rs
hlx_runtime/: lc_codec.py
python/: hlx_lcb_client.py
shader/: adam_update.glsl  attention_output.glsl  attention_scores.glsl  cross_entropy_backward.glsl  cross_entropy_forward.glsl  elementwise.glsl  embedding_backward.glsl  gemm.glsl  gemm_backward.glsl  gradient_backward.glsl  gradient_forward.glsl  gradient_reduce.glsl  layernorm_backward.glsl  layernorm_forward.glsl  reduce_final.glsl  reduce_sum.glsl  softmax_forward.glsl
shaders/: build_shaders.sh  cube.frag  cube.vert
src/: attention_kernel.rs  buffer.rs  compute.rs  error.rs  gemm_kernel.rs  gradient_kernel.rs  lib.rs  tensor.rs  tensor_buffer.rs  transformer_config.rs  transformer_layer.rs
src/lcb/: executor.rs  mod.rs  parser.rs
tests/: gradient_kernel_integration.rs
tools/: hlx_model_compiler.py
