[package]
name = "hlx_vulkan"
version = "0.1.0"
edition = "2021"
authors = ["Matt <matt@example.com>"]
description = "HLX Vulkan compute backend with PyO3 bindings"
license = "MIT"
readme = "README.md"
repository = "https://github.com/matt/hlx-vulkan"

[lib]
name = "hlx_vulkan"
crate-type = ["cdylib", "rlib"]  # cdylib for PyO3, rlib for binaries

[[bin]]
name = "hlx_shader_compiler"
path = "src/bin/hlx_shader_compiler.rs"

[[bin]]
name = "hlx_pipeline_cli"
path = "src/bin/hlx_pipeline_cli.rs"

[[bin]]
name = "hlx_demo_cube"
path = "src/bin/hlx_demo_cube.rs"

[[bin]]
name = "hlx_vulkan_train"
path = "src/bin/hlx_vulkan_train.rs"

[dependencies]
# CLI argument parsing
clap = { version = "4.4", features = ["derive"] }
# Vulkan bindings - thin wrapper, full control
ash = "0.38"

# Window management and Vulkan surface creation
winit = "0.28"
raw-window-handle = "0.6"
ash-window = "0.13"

# PyO3 for Python bindings
pyo3 = { version = "0.22", features = ["extension-module"] }

# Error handling
thiserror = "2.0"

# Logging
log = "0.4"
env_logger = "0.11"

# JSON parsing
serde_json = "1.0"

# Cryptographic hashing (content addressing)
sha2 = "0.10"

[dev-dependencies]
# Testing
pretty_assertions = "1.4"

[features]
default = []
validation = []  # Enable Vulkan validation layers by default
validate_determinism = []  # Runtime determinism testing (5-run bitwise comparison)

[profile.release]
lto = true
codegen-units = 1
