[package]
name = "hlx-transformer"
version = "0.1.0"
edition = "2021"
authors = ["HLX Team"]
description = "Vulkan-based transformer implementation for deterministic ML training"
license = "MIT"
readme = "README.md"
keywords = ["vulkan", "transformer", "ml", "gpu", "compute"]

[dependencies]
ash = "0.37"

[dev-dependencies]
# For testing

[features]
default = []
# Enable runtime determinism validation
validate_determinism = []

[[bin]]
name = "train_transformer"
path = "src/bin/train_transformer.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.dev]
opt-level = 1
debug = true
